--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,6 @@
     <color name="color_deep_gold">#de970e</color>
     <color name="color_semi_deep_black">#333333</color>
     <color name="color_light_green">#DAFFEB</color>
+    <color name="color_light_gold">#8F8862</color>
 
 </resources>
