--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -7,7 +7,6 @@
     android:background="@color/screenBackground"
    >
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -960,7 +959,7 @@
 
 
             <RelativeLayout
-                android:id="@+id/rl_PAYMENT"
+                android:id="@+id/rlPayment"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_28sdp"
                 android:layout_below="@+id/rlPurpose"
@@ -972,7 +971,9 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:weightSum="1"
+                    android:baselineAligned="false">
+
                     <LinearLayout
                         android:id="@+id/ll_payment_scheduled"
                         android:layout_width="0dp"
@@ -982,6 +983,7 @@
                         android:layout_weight="0.5"
                         android:background="@drawable/payment_scheduled_button"
                         android:gravity="center">
+
                         <com.app.l_pesa.common.CommonTextRegular
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -991,6 +993,7 @@
                             android:textSize="@dimen/_10sdp" />
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:id="@+id/ll_payment_history"
                         android:layout_width="0dp"
@@ -1008,13 +1011,12 @@
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/_10sdp" />
                     </LinearLayout>
+
                 </LinearLayout>
+
             </RelativeLayout>
 
       </RelativeLayout>
-
-
-
 
     </ScrollView>
 
