--- a/app/src/main/res/layout/layout_load_more.xml
+++ b/app/src/main/res/layout/layout_load_more.xml
@@ -12,6 +12,9 @@
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_gravity="center_horizontal"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/colorApp"
 
         />
 </LinearLayout>
